ds-2025-2: add temp rounding and adjust readme.md for repo